Set up xhr-polling and server configuration to host it. Disconnect eventfrom the client is now fired instantly

--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,7 @@
 {
-  "name": "ChatWithNode",
+  "name": "tellki",
   "version": "0.0.1",
-  "engines": {
-    "node": "0.8.x"
-  },
   "dependencies": {
-    "socket.io": "0.9.13"
-  },
-  "scripts": {
-    "start": "node server.js"
+    "socket.io": ""
   }
 }
